# scv

./: .gitignore  CMakeLists.txt  README.md
examples/specs/: message.scv  otherfiletest.scv  otherfiletesttarget.scv  person.scv  person.scvspec
include/: argparser.hpp  ast.hpp  astprinter.hpp  emitter.hpp  error.hpp  global.hpp  lexer.hpp  pipeline.hpp  token.hpp  utils.hpp
src/: argparser.cpp  ast.cpp  astprinter.cpp  emitter.cpp  error.cpp  global.cpp  lexer.cpp  main.cpp  pipeline.cpp  token.cpp  utils.cpp
